tests/qd/compile_errors/switch_duplicate_case.qd
// Test: switch statement with duplicate case values
// TODO: This should be an error but currently compiles (takes first match)

fn main() {
	1 switch {
		1 {
			10 . nl
		}
		1 {
			20 . nl
		}
		_ {
			30 . nl
		}
	}
}
